recent orders and oders in process